ffmpeg_wrapper is a cmake package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,9 @@ include_directories("C:\\Users\\wanglab\\Documents\\ffmpeg_wrapper\\headers")
 include_directories("C:\\Program\ Files\\Basler\\pylon\ 6\\Development\\include")
 include_directories("C:\\Users\\wanglab\\Downloads\\ffmpeg-5.0-full_build-shared\\include")
 
-find_library(FFMPEG_WRAPPER_LIBRARY ffmpeg_wrapper HINTS "C:\\Users\\wanglab\\Documents\\ffmpeg_wrapper\\build")
+#find_library(FFMPEG_WRAPPER_LIBRARY ffmpeg_wrapper HINTS "C:\\Users\\wanglab\\Documents\\ffmpeg_wrapper\\build")
+find_package(ffmepg_wrapper PATHS "C:\\Users\\wanglab\\Documents\\ffmpeg_wrapper\\build")
+
 
 set(PROJECT_SOURCES
         src/main.cpp
