--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,28 +18,15 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Multimedia)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS MultimediaWidgets)
 
-set(FFMPEG_PATH "C:\\Users\\wanglab\\Downloads\\ffmpeg-5.0-full_build-shared\\lib")
 set(BASLER_PATH "C:\\Program\ Files\\Basler\\pylon\ 6\\Development\\lib\\x64")
-
-find_library(AVCODEC_LIBRARY avcodec HINTS ${FFMPEG_PATH})
-find_library(AVFORMAT_LIBRARY avformat HINTS ${FFMPEG_PATH})
-find_library(AVUTIL_LIBRARY avutil HINTS ${FFMPEG_PATH})
-find_library(AVFILTER_LIBRARY avfilter HINTS ${FFMPEG_PATH})
-find_library(SWSCALE_LIBRARY swscale HINTS ${FFMPEG_PATH})
-find_library(SWRESAMPLE_LIBRARY swresample HINTS ${FFMPEG_PATH})
 
 find_library(PYLON_BASE_LIBRARY PylonBase_v6_1 HINTS ${BASLER_PATH})
 find_library(PYLON_GENAPI_LIBRARY GenApi_MD_VC141_v3_1_Basler_pylon HINTS ${BASLER_PATH})
 find_library(PYLON_GCBASE_LIBRARY GCBase_MD_VC141_v3_1_Basler_pylon HINTS ${BASLER_PATH})
 find_library(PYLON_UTILITY_LIBRARY PylonUtility_v6_1 HINTS ${BASLER_PATH})
 
-include_directories("C:\\Users\\wanglab\\Documents\\ffmpeg_wrapper\\headers")
 include_directories("C:\\Program\ Files\\Basler\\pylon\ 6\\Development\\include")
-include_directories("C:\\Users\\wanglab\\Downloads\\ffmpeg-5.0-full_build-shared\\include")
-
-#find_library(FFMPEG_WRAPPER_LIBRARY ffmpeg_wrapper HINTS "C:\\Users\\wanglab\\Documents\\ffmpeg_wrapper\\build")
-find_package(ffmepg_wrapper PATHS "C:\\Users\\wanglab\\Documents\\ffmpeg_wrapper\\build")
-
+find_package(ffmpeg_wrapper CONFIG REQUIRED PATHS "C:\\Users\\wanglab\\Documents\\ffmpeg_wrapper\\build\\test")
 
 set(PROJECT_SOURCES
         src/main.cpp
@@ -84,18 +71,13 @@ target_link_libraries(CameraViewer PRIVATE Qt${QT_VERSION_MAJOR}::Multimedia)
 target_link_libraries(CameraViewer PRIVATE Qt${QT_VERSION_MAJOR}::MultimediaWidgets)
 
 target_link_libraries(CameraViewer PRIVATE
-    ${AVCODEC_LIBRARY}
-    ${AVFORMAT_LIBRARY}
-    ${AVUTIL_LIBRARY}
-    ${AVFILTER_LIBRARY}
-    ${SWSCALE_LIBRARY}
-    ${SWRESAMPLE_LIBRARY}
-    ${FFMPEG_WRAPPER_LIBRARY}
     ${PYLON_BASE_LIBRARY}
     ${PYLON_GENAPI_LIBRARY}
     ${PYLON_GCBASE_LIBRARY}
     ${PYLON_UTILITY_LIBRARY}
 )
+
+target_link_libraries(CameraViewer PRIVATE ffmpeg_wrapper::ffmpeg_wrapper)
 
 set_target_properties(CameraViewer PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
